
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>mofokom</groupId>
    <artifactId>huawei-ussd-ra</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>huawei-ussd-ra</name>
    <url>http://www.mofokom.biz/site/${pom.artifactId}</url>
    <distributionManagement>
        <snapshotRepository>
            <id>artifactory</id>
            <name>artifactory</name>
            <url>http://www.mofokom.biz/artifactory/snapshots-public</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
        <site>
            <id>mofokom</id>
            <url>scp://www.mofokom.biz:8822/var/www/mofokom/site/${pom.artifactId}</url>
        </site>
    </distributionManagement>
    <properties>
        <serial.number>4e44f238</serial.number>
    </properties>

    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
                 <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludeTransitive>true</excludeTransitive>
                    <includeScope>compile</includeScope>
                    <excludeScope>provided</excludeScope>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <chmod>true</chmod>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <overview>src/main/java/overview-summary.html</overview>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>ra-type</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>ra-type</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>mofokom/in/ussd/resource/*.class</include>
                                <include>META-INF/resource-adaptor-type-jar.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>ra</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>ra</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>ie/**/*.class</include>
                                <include>mofokom/in/ussd/impl/util/*.class</include>
                                <include>mofokom/in/ussd/impl/*.class</include>
                                <include>mofokom/in/ussd/resource/impl/*.class</include>
                                <include>mofokom/in/ussd/resource/UssdResourceAdaptorUsageParameters.class</include>
                                <include>META-INF/resource-adaptor-jar.xml</include>
                            </includes>
                            <manifestSections>
                                <manifestSection>
                                    <name>mofokom/deadlock/</name>
                                    <manifestEntries>
                                        <Sealed>true</Sealed>
                                    </manifestEntries>
                                </manifestSection>
                                <manifestSection>
                                    <name>mofokom/in/ussd/resource/impl/</name>
                                    <manifestEntries>
                                        <Sealed>true</Sealed>
                                    </manifestEntries>
                                </manifestSection>
                            </manifestSections>
                        </configuration>
                    </execution>
                    <execution>
                        <id>event</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <classifier>event</classifier>
                            <attach>true</attach>
                            <includes>
                                <include>mofokom/in/ussd/*.class</include>
                                <include>mofokom/in/ussd/event/*.class</include>
                                <include>META-INF/event-jar.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <classpathPrefix>dependency</classpathPrefix>
                            <addClasspath>false</addClasspath>
                            <!--mainClass>mofokom.test.Main</mainClass-->
                        </manifest>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.pyx4me</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                        <configuration>
                            <injar>${project.artifactId}-${project.version}-ra.jar</injar>
                            <outjar>${project.artifactId}-${project.version}-ra.jar</outjar>
                            <assembly>
                                <inclusions>
                                    <inclusion>
                                        <filter>!*.DSA, !/META-INF/**, !**/*.DSA, !**/*.SF</filter>
                                        <groupId>mofokom</groupId>
                                        <artifactId>deadlock</artifactId>
                                    </inclusion>
                                    <inclusion>
                                        <groupId>mofokom</groupId>
                                        <artifactId>ra-common</artifactId>
                                    </inclusion>
                                </inclusions>
                            </assembly>
                        </configuration>
                    </execution>
                    <!--
                    <execution>
                        <id>complete</id>
                        <phase>package</phase>
                        <goals>
                            <goal>proguard</goal>
                        </goals>
                        <configuration>
                            <injar>${project.artifactId}-${project.version}.jar</injar>
                            <outjar>${project.artifactId}-${project.version}.jar</outjar>
                            <inFilter>META-INF/MANIFEST.MF, !**/*.xml, !**/*ResourceAdaptor*, !**/*Activity*</inFilter>
                        </configuration>
                    </execution>
                    -->
                </executions>
                <configuration>
                    <options>
                        <option>-dontshrink</option>
                        <option>-dontoptimize</option>
                        <option>-dontpreverify</option>
                        <option>-dontobfuscate</option>
                        <!--
                        <option>-dontskipnonpubliclibraryclasses</option>
                        <option>-dontskipnonpubliclibraryclassmembers</option>
                        -->
                        <option>-target 1.6</option>

                        <option>-renamesourcefileattribute USSD-INFOX-${maven.build.timestamp}-${serial.number}.java</option>
                        <option>-repackageclasses mofokom.in.ussd.resource.impl</option>
                        <option>-flattenpackagehierarchy mofokom.in.ussd.resource.impl</option>
                        <option>-overloadaggressively</option>
                        <option>-keepattributes LineNumbers,InnerClasses,SourceFile,ExceptionsLineNumberTable,Deprecated,Signature,*Annotation*,EnclosingMethod</option>
                        <option>-printmapping ${basedir}/src/main/proguard/out.pro</option>
                        <!--
                        <option>-keep public class mofokom.test.Main {*;}</option>
                        -->
                        <option>-keep public class mofokom.in.ussd.resource.UssdResourceAdaptorUsageParameters {*;}</option>
                        <option>-keep public class mofokom.in.ussd.resource.impl.UssdResourceAdaptor{}</option>
                        <!--
                        <option>-keep public class mofokom.in.ussd.impl.UssdEventListener {*;}</option>
                        <option>-keep public class mofokom.in.ussd.impl.UssdConnectionListener {*;}</option>
                        -->
                        <option>-adaptresourcefilecontents **.properties,META-INF/MANIFEST.MF</option>
                    </options>
                    <libs>
                        <lib>${java.home}/lib/rt.jar</lib>
                        <lib>target/${project.artifactId}-${project.version}-ra-type.jar</lib>
                        <lib>target/${project.artifactId}-${project.version}-event.jar</lib>
                    </libs>
                </configuration>
            </plugin>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <executions>
                    <execution>
                        <id>install</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <archiveDirectory>target/</archiveDirectory>
                            <includes>
                                <include>**/*-ra.jar</include>
                            </includes>
                            <processAttachedArtifacts>false</processAttachedArtifacts>
                            <processMainArtifact>false</processMainArtifact>
                            <removeExistingSignatures>true</removeExistingSignatures>
                            <keystore>/virt/main.jks</keystore>
                            <alias>slee</alias>
                            <storepass>kraj2003</storepass>
                            <verify>true</verify>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2-beta-5</version>
                <executions>
                    <execution>
                        <id>dist-assemble</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <attach>true</attach>
                    <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                    <descriptors>
                        <descriptor>src/main/assemble/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <!--
                  <executions>
                   <execution>
                     <phase>test</phase>
                     <goals><goal>test</goal></goals>
                     </execution>
                  </executions>
                  -->
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Djava.net.preferIPv4Stack=true -Djava.security.manager -Djava.security.policy=file:///${project.basedir}/src/main/resources/.java.policy</argLine>
                    <systemProperties>
                    </systemProperties>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.7</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>javax.slee</groupId>
            <artifactId>jainslee-api</artifactId>
            <version>1.1</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk16</artifactId>
            <version>1.46</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mofokom</groupId>
            <artifactId>deadlock</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>slee-test-framework</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.15</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mofokom</groupId>
            <artifactId>ra-common</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>